design_challenges_01/test/20190006/12_error.txt
12.c: In function ‘ssu_thread_producer’:
12.c:18:25: error: ‘cond2’ undeclared (first use in this function)
    pthread_cond_signal(&cond2);
                         ^
12.c:18:25: note: each undeclared identifier is reported only once for each function it appears in
12.c: In function ‘ssu_thread_consumer’:
12.c:32:23: error: ‘cond2’ undeclared (first use in this function)
    pthread_cond_wait(&cond2,&mutex);
                       ^
12.c: In function ‘main’:
12.c:50:24: error: ‘cond2’ undeclared (first use in this function)
  pthread_cond_destroy(&cond2);
                        ^
